Update and rename index (28).html to index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>منصة إديسون</title>
+    <title>اعداديه جعفر النقدي </title>
     
-    <meta property="og:title" content="منصة إديسون التعليمية">
-    <meta property="og:description" content="منصة اديسون التعليمية هي منصة تقدم محاضرات لطلاب السادس العلمي بشكل مجاني 2026_ 2025">
+    <meta property="og:title" content="اعداديه جعفر النقدي ">
+    <meta property="og:description" content="منصة جعفر النقدي التعليمية هي منصة تقدم مراجعات مركزه  لطلاب السادس العلمي بشكل مجاني 2026_ 2025">
     <meta property="og:image" content="https://i.imghippo.com/files/Baa5419rPk.jpg">
     <meta property="og:url" content="https://adson.netlify.app">
     <meta property="og:type" content="website">
@@ -1443,7 +1443,7 @@
     <header>
         <h1 class="site-title" onclick="navigate('home')">
             <div class="site-logo">إ</div>
-            منصة إديسون
+           اعداديه جعفر النقدي
         </h1>
 
         <div class="header-actions">
@@ -1470,12 +1470,12 @@
             <div class="modal-header">
                 <h3 class="modal-title">
                     <i data-lucide="bell"></i>
-                    مرحبًا في منصة إديسون!
+                مرحبا بك في منصه السجاجه !
                 </h3>
             </div>
             <div class="modal-body">
-                <p>لا تنسى تشترك في قناتنا على تيلجرام حتى توصلك أحدث التحديثات والأخبار الجديدة.</p>
-                <a href="https://t.me/od7cc" target="_blank" class="btn btn-telegram">
+                <p>لا تنسى مراسلتي على تيلجرام حتى توصلك أحدث التحديثات والأخبار الجديدة.</p>
+                <a href="https://t.me/Q_A_S_H_M_7" target="_blank" class="btn btn-telegram">
                     <i data-lucide="send"></i>
                     <span>اشترك الآن</span>
                 </a>
@@ -1511,7 +1511,7 @@
             <div class="category-card" onclick="loadCategory('year-2026')" style="--gradient: linear-gradient(135deg, #0ea5e9, #1a56db);">
                 <div class="category-icon"><i data-lucide="calendar-days" style="width: 48px; height: 48px;"></i></div>
                 <div class="category-content">
-                    <h3 class="category-title">مدرسين سنة 2026</h3>
+                    <h3 class="category-title">مدرسين قسم امتحان الفيزيا</h3>
                     <p class="category-description">المحاضرات والمواد الدراسية لطلاب 2026</p>
                     <button class="btn">عرض المواد</button>
                 </div>
@@ -1520,7 +1520,7 @@
             <div class="category-card" onclick="loadCategory('year-2025')" style="--gradient: linear-gradient(135deg, #f59e0b, #f97316);">
                 <div class="category-icon"><i data-lucide="calendar-days" style="width: 48px; height: 48px;"></i></div>
                 <div class="category-content">
-                    <h3 class="category-title">مدرسين سنة 2025</h3>
+                    <h3 class="category-title">مدرسين امتحان الكيميا </h3>
                     <p class="category-description">المحاضرات والمواد الدراسية لطلاب 2025</p>
                     <button class="btn">عرض المواد</button>
                 </div>
@@ -1529,8 +1529,8 @@
             <div class="category-card" onclick="loadCategory('distinguished')" style="--gradient: linear-gradient(135deg, #10b981, #047857);">
                 <div class="category-icon"><i data-lucide="sparkles" style="width: 48px; height: 48px;"></i></div>
                 <div class="category-content">
-                    <h3 class="category-title">قسم المتميزين</h3>
-                    <p class="category-description">مواد خاصة للطلاب المتميزين</p>
+                    <h3 class="category-title">مدرسين امتحان الرياضيات </h3>
+                    <p class="category-description"></p>
                     <button class="btn">عرض المواد</button>
                 </div>
             </div>
@@ -1538,8 +1538,8 @@
             <div class="category-card" onclick="loadCategory('literary')" style="--gradient: linear-gradient(135deg, #8b5cf6, #7c3aed);">
                 <div class="category-icon"><i data-lucide="scroll-text" style="width: 48px; height: 48px;"></i></div>
                 <div class="category-content">
-                    <h3 class="category-title">القسم الأدبي</h3>
-                    <p class="category-description">المواد والمناهج الادبي</p>
+                    <h3 class="category-title">مدرسين امتحان الانكليزي</h3>
+                    <p class="category-description"></p>
                     <button class="btn">عرض المواد</button>
                 </div>
             </div>
