--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بوابة النتائج الكونية - الأستاذ كرار حداد</title>
+    <title>بوابة النتائج الاكترونيه |اعداديه جعفر النقدي </title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     
@@ -606,3 +606,4 @@
 
 </body>
 </html>
+
