--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
     <div class="holographic-card">
         
         <div class="header-section">
-            <h1 class="glow-logo">الأستاذ كرار حداد</h1>
-            <h2 class="portal-title">بوابة النتائج الكونية</h2>
+            <h1 class="glow-logo">اعداديه جعفر النقدي </h1>
+            <h2 class="portal-title">بوابة النتائج الاكترونية</h2>
         </div>
         
         <div class="data-input-console">
@@ -606,4 +606,5 @@
 
 </body>
 </html>
+
 
