--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <header>
             <img src="https://l.top4top.io/p_36049l1ro1.jpg" alt="https://l.top4top.io/p_36049l1ro1.jpg" class="header-image left-img">
             <h1> الأستاذ مصطفى محسن</h1>
-            <img src="https://ibb.co/4nTv9YbZ" alt="https://ibb.co/4nTv9YbZ" class="header-image right-img">
+            <img src="https://j.top4top.io/p_3604zwkjf1.jpg" alt="https://j.top4top.io/p_3604zwkjf1.jpg" class="header-image right-img">
             <p>مساعدك الاحترافي للمعدلات والمهام الدراسية</p>
         </header>
 
@@ -804,3 +804,4 @@
     </script>
 </body>
 </html>
+
