--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منظم الأستاذ مصطفى محسن</title>
+    <title> الأستاذ مصطفى محسن</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
     
@@ -313,9 +313,9 @@
 
     <div class="container">
         <header>
-            <img src="image-left.png" alt="https://i.top4top.io/p_36047ibrl1.jpg" class="header-image left-img">
+            <img src="https://i.top4top.io/p_36047ibrl1.jpg" alt="https://i.top4top.io/p_36047ibrl1.jpg" class="header-image left-img">
             <h1>منظم الأستاذ مصطفى محسن</h1>
-            <img src="image-right.png" alt="https://j.top4top.io/p_360479fu52.jpg" class="header-image right-img">
+            <img src="https://j.top4top.io/p_360479fu52.jpg" alt="https://j.top4top.io/p_360479fu52.jpg" class="header-image right-img">
             <p>مساعدك الاحترافي للمعدلات والمهام الدراسية</p>
         </header>
 
@@ -620,3 +620,4 @@
     </script>
 </body>
 </html>
+
