--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <div class="container">
         <header>
             <img src="https://i.top4top.io/p_36047ibrl1.jpg" alt="https://i.top4top.io/p_36047ibrl1.jpg" class="header-image left-img">
-            <h1>منظم الأستاذ مصطفى محسن</h1>
+            <h1> الأستاذ مصطفى محسن</h1>
             <img src="https://j.top4top.io/p_360479fu52.jpg" alt="https://j.top4top.io/p_360479fu52.jpg" class="header-image right-img">
             <p>مساعدك الاحترافي للمعدلات والمهام الدراسية</p>
         </header>
@@ -620,4 +620,5 @@
     </script>
 </body>
 </html>
+
 
