--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     <div class="grid-header">كورس 2 (ش1)</div>
                     <div class="grid-header">كورس 2 (ش2)</div>
                     
-                    <input type="text" class="subject-name" placeholder="اسم المادة" value="التربية الإسلامية">
+                    <input type="text" class="subject-name" placeholder="اسم المادة" value="الإسلامية">
                     <input type="number" class="grade-input" data-exam="m1" data-subject-index="0" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="m2" data-subject-index="0" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="mid" data-subject-index="0" min="0" max="100">
@@ -407,7 +407,7 @@
                     <input type="number" class="grade-input" data-exam="c2m1" data-subject-index="5" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="c2m2" data-subject-index="5" min="0" max="100">
 
-                    <input type="text" class="subject-name" placeholder="اسم المادة 6" value="اللغة الإنجليزية">
+                    <input type="text" class="subject-name" placeholder="اسم المادة 6" value="الإنجليزية">
                     <input type="number" class="grade-input" data-exam="m1" data-subject-index="6" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="m2" data-subject-index="6" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="mid" data-subject-index="6" min="0" max="100">
@@ -789,3 +789,4 @@
     </script>
 </body>
 </html>
+
