--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <input type="number" class="grade-input" data-exam="c2m1" data-subject-index="5" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="c2m2" data-subject-index="5" min="0" max="100">
 
-                    <input type="text" class="subject-name" placeholder="اسم المادة 6" value="الإنجليزية">
+                    <input type="text" class="subject-name" placeholder="اسم المادة 6" value="الاسلاميه">
                     <input type="number" class="grade-input" data-exam="m1" data-subject-index="6" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="m2" data-subject-index="6" min="0" max="100">
                     <input type="number" class="grade-input" data-exam="mid" data-subject-index="6" min="0" max="100">
@@ -789,4 +789,5 @@
     </script>
 </body>
 </html>
+
 
